[package]
name = "robot-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nary_tree = "0.4.3"
petgraph = "0.6"
# termtree = "0.4.1"
urdf-rs = "0.9.0"
# sdformat-rs = { git = "https://github.com/azm-project/sdformat-rs" }
# anyhow = "1"