[package]
name = "robot-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.8.1"
hashbrown = "0.15.3"
# termtree = "0.4.1"
urdf-rs = "0.9.0"
liealg = { path = "../liealg" }
nalgebra = "0.33.2"
# sdformat-rs = { git = "https://github.com/azm-project/sdformat-rs" }
# anyhow = "1"