[package]
name = "robot-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.8.2"
hashbrown = "0.15.4"
urdf-rs = "0.9.0"
liealg = { git = "https://github.com/geshengpsn/liealg" }
nalgebra = "0.33.2"
reqwest = { version = "0.12", features = ["blocking"] }